--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
-    margin: 0
-    padding: 0
+    margin: 0;
+    padding: 0;
 }
 
 .logo {
@@ -13,3 +13,18 @@
     background-size: cover;
     border-bottom-left-radius: 70px;
 }
+
+#section-2 {
+    height: 360px;
+    border-top-right-radius: 70px;
+    border-bottom-left-radius: 70px;
+}
+
+footer {
+    border-top-right-radius: 70px;
+}
+
+footer li {
+    list-style: none;
+}
+
