--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     font-family: 'Overpass', sans-serif;
 }
 
-body {
+
+html, body {
     position:relative;
     overflow:scroll;
     width:100vw;
@@ -12,16 +13,23 @@ body {
 
 /* nav bar */
 .logo {
-    margin: 3% 5% 3% 7%;
+    margin: 3% 5% 3% 9%;
+}
+
+#login {
+    margin-left: 12%;
 }
 
 #nav-bar {
-    background-color:hsl(353, 100%, 62%);
-    background-image: url(images/bg-pattern-intro-desktop.svg);
-    background-size: 170%;
-    background-position: 35% 51%;
+    /* background-color:hsl(353, 100%, 62%); */
+    background-image: 
+    url(images/bg-pattern-intro-desktop.svg),
+    linear-gradient(to left, hsl(353, 100%, 62%),  hsla(13, 100%, 72%));
+    background-size: stretch;
+    background-position: 25% 51%;
     background-repeat: no-repeat;
-    border-bottom-left-radius: 70px;
+    border-bottom-left-radius: 100px 90px;
+    height: 550px !important;
 }
 
 #nav-bar button {
@@ -33,9 +41,18 @@ body {
     font-weight: 500;
 }
 
+.dropdown-item:hover {
+    background-color:white;
+    font-weight: bold;
+}
+
+li a {
+    color: white!important;
+}
+
 #banner h1 {
     font-weight: 600;
-    font-size: 3rem;
+    font-size: 3.5em;
 }
 
 .type-2 {
@@ -56,22 +73,75 @@ body {
 }
 
 /* main */
+main {
+    max-width:100%;
+    overflow: hidden;
+}
 
 main h1, h2 {
     font-weight: 600;
 }
-
-
-#section-2 {
-    height: 360px;
-    border-top-right-radius: 70px;
-    border-bottom-left-radius: 70px;
+/* section 1 */
+#s1-title {
+    margin-top: 8%;
+    z-index: 2;
 }
 
-#image-container {
+#section-1 p {
+    width: 85%;
+}
+
+#s1-image-container {
     position: relative;
-    left: -13%;
-    /* overflow: hidden; */
+    margin-top: -10%;
+    right: -13.75%;
+    z-index: 2;
+    overflow:hidden !important;
+}
+
+
+
+/* section 2 */
+#section-2 {
+    height: 400px;
+    border-top-right-radius: 100px;
+    border-bottom-left-radius: 100px;
+    background-color:hsl(237, 17%, 21%);
+    background-image: url(images/bg-pattern-circles.svg);
+    background-size: 90%;
+    background-position: -300% 80%;
+    background-repeat: no-repeat;
+}
+
+/* #s2-image-container {
+    background-image: url(images/bg-pattern-circles.svg);
+    background-size: 170%;
+    background-position: 35% 51%;
+} */
+
+#img-1 {
+    z-index: 2;
+    position: relative;
+    bottom:10px;
+    left: 100px;
+}
+
+
+
+/* section 3 */
+#s3-image-container {
+    position: relative;
+    left: -14%;
+    width: 50%;
+}
+
+#s3-image-container img {
+    width: 180%;
+}
+
+#s3-text-container {
+    margin-right: 12%;
+    width: 50%;
 }
 /* footer */
 
@@ -92,26 +162,200 @@ footer .logo {
     height:50px;
 }
 
-@media only screen and (max-width: 990px) {
-     body {
-        max-width: 100%;
-        min-width: 100%;
-    }
-    #banner h1 {
-        font-weight: 600;
-        font-size: 2rem;
+@media only screen and (max-width: 375px) {
+    /* nav */
+
+    #nav-bar {
+        background-image: 
+         url(images/bg-pattern-intro-desktop.svg),
+        linear-gradient(to top, hsl(353, 100%, 62%),  hsla(13, 100%, 72%));
+        background-size: 300%;
+        background-position: 35% 35%;
+        background-repeat: no-repeat;
+        
+
     }
 
+    .logo {
+        margin: 12% 5% 3% 9%;
+        width:90px;
+        height:auto;
+    }
     li .type-1 {
         color: black !important;
     }
 
+    li a {
+        width: 100%;
+        color: black!important;
+        text-align: center;
+    }
+
     .dropdown-menu {
         color: black;
+        width: 100%;
         font-weight: bold !important;
+
+        
     }
 
     .navbar-collapse {
         background-color:white;
     }
+
+    #banner h1 {
+        font-weight: 300;
+        width: 85%;
+        text-align: center;
+    }
+     body {
+        max-width: 100%;
+        min-width: 100%;
+    }
+    /* main */
+    #banner h1 {
+        font-weight: 600;
+        font-size: 2rem;
+    }
+    /* section 1 */
+    #s1-container {
+        flex-direction: column-reverse !important;
+        justify-content: center;
+    }
+
+    #section-1 h2 {
+        text-align: center;
+        margin-bottom: 25px;
+    }
+
+    #s1-container div {
+        width: 100% !important;
+        justify-content: center;
+    }
+
+    #s1-text-container {
+        margin: 0 !important;
+    }
+
+    #s1-text-container p { 
+        margin-left: 0 !important;
+        width: 85%!important;
+    }
+
+    #s1-text-container h2 { 
+        width: 70%!important;
+    }
+
+    #s1-image-container {
+        /* max-width: 100% !important; */
+        left:0;
+        margin-top: 50px;
+    }
+
+
+    #desktop-img {
+        display: none;
+    }
+
+    #mobile-img {
+        display: flex!important;
+        margin-bottom: 0!important;
+    }
+
+        /* section 2 */
+    #section-2 {
+        background-position: 50% -240px;
+        background-size: 160%;
+        margin-top: 220px;
+        height: auto;
+    }
+
+    #section-2 h1 {
+        text-align: center;
+    }
+
+    #s2-container {
+        flex-direction: column!important;
+    }
+
+    #s2-container h2, p {
+        width: 75%;
+        text-align: center;
+    }
+
+
+    #s2-container div {
+        width: 100% !important;
+    }
+
+    #s2-image-container {
+        height:180px;
+    }
+
+    #img-1 {
+        /* border-top: 1px solid red; */
+        bottom:230px;
+        left: 0;
+        
+    }
+
+        #s2-text-container {
+            margin-bottom: 20%!important;
+        }
+    
+
+        /* section-3 */
+
+    #s3-container {
+        display:flex;
+        flex-direction: column!important;
+    }
+
+    #s3-desktop {
+        display: none;
+    }
+
+    #s3-mobile {
+        display: flex!important;
+    }
+
+    #s3-image-container {
+        width: 100%!important;
+        left: 0;
+        margin: 0!important;
+    }
+    #s3-text-container {
+        width: 100%;
+        align-items: center!important;
+        padding: 0!important;
+    }
+
+    #s3-text-container p{
+        width: 85%!important;
+        margin-top: 20px;
+
+    }
+
+    /* footer */
+
+    #footer {
+        flex-direction: column!important;
+        align-items: center!important;
+        margin-top: 60px;
+    }
+
+    #footer .logo {
+        margin-bottom: 50px;
+    }
+
+    #footer ul {
+        margin:0 !important;
+        align-items: center!important;
+    }
+
+    #footer-bottom {
+        margin-bottom:50px;
+    }
+
+
 }
